2006-04-23  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* source/inc/numeric/lpbase.hxx,
	* source/numeric/lpbase.cxx: split the BaseAlgorithm class into envelope
	and implementation classes, added getCanonicalModel and setCanonicalSolution
	to encapsulate removal of constant equivalent variables.

	* source/inc/numeric/lpmodel.hxx,
	* source/numeric/lpmodel.cxx: switched from map to vector for storing variable
	ranges, and made necesssary changes due to this switch.  Consolidated delete*
	methods into single deleteVariables() method.

	* source/inc/numeric/lpsimplex.hxx,
	* source/numeric/lpsimplex.cxx: added throw() to destructors.  Made changes
	to use the *Canonical* methods of BaseAlgorithm.  Removed old code.

	* source/numeric/matrix.cxx: removed unused local variable.

2006-04-04  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* source/numeric/lpsimplex.cxx (queryEnteringNBVar): Added new code to 
	check for constant equivalent boundary condition, without which we may
	reach an "optimum" solution only to realize that that solution is not
	really feasible.  Also did some trivial code cleanup.

	* source/numeric/lpsimplex.cxx (buildInitialVars): Switched to using a
	temporary model instead of an original one.  The temporary model has
	additional constraints for slack variables which the original model
	lacks.

2006-04-03  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* source/inc/global.hxx (toVector): new function added.

	* source/inc/numeric/lpmodel.hxx
	* source/numeric/lpmodel.cxx: changed argument types of several variable
	boundary related functions from unsigned long to size_t.

	* source/inc/numeric/type.hxx: added javadoc comments to 2 enums.

	* source/numeric/lpsimplex.cxx: removed unused header include.  Did a
	major rewrite of the initial solution search algorithm for bounded
	revised simplex method (BoundedRevisedSimplexImpl).  Extracted iteration
	variable initialization part into its own method to make it easier to
	follow.
