@@ -1,0 +1,9 @@
+#ifndef SCSOLVER_HRC
+#define SCSOLVER_HRC
+
+#define SCSOLVER_RES_START 1000
+
+#define SCSOLVER_STR_FOO (SCSOLVER_RES_START)
+#define SCSOLVER_STR_BAA (SCSOLVER_RES_START+1)
+
+#endif
