@@ -1,0 +1,12 @@
+#include "scsolver.hrc"
+
+String SCSOLVER_STR_FOO
+{
+	Text [ de ] = "SicherFoo" ;
+	Text [ en-US ] = "Foo";
+};
+String SCSOLVER_STR_BAA
+{
+	Text [ de ] = "GeDeutschenBaa" ;
+	Text [ en-US ] = "Baa";
+};
