@@ -1,3 +1,11 @@
+2006-04-27  Michael Meeks  <michael.meeks@novell.com>
+
+	* source/ui/scsolver.hrc, source/ui/scsolver.src: add
+	dummy strings for translation.
+	
+	* prj/d.lst, source/ui/makefile.mk, util/makefile.mk:
+	compile & install resource file.
+
 2006-04-23  Kohei Yoshida  <kohei.yoshida@gmail.com>
 
 	* source/inc/numeric/lpbase.hxx,
